fixed weblayout desktop and tablet size

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,13 +1,15 @@
 <section class="hero">
   <div class="container">
     <div class="hero__container">
-      <h1 class="hero__title">Радио
-        <span class="hero__title_name">W-Wawe</span>
-      </h1>
-      <div class="hero__desc">Привет, на связи W-Wawe! Раньше мы были
-        <a href="#" class="hero__desc_link">изданием,</a>
-        а теперь пробуем себя в разоворном жанре. Говорим о музыке, политике, истории, науке и культуре. Здесь, помимо прямого эфира — архив передач и многое другое :)</div>
-      <button class="btn-reset hero__button" data-graph-path="">Слушать эфир</button>
+      <div class="hero__info">
+        <h1 class="hero__title">Радио
+          <span class="hero__title_name">W-Wawe</span>
+        </h1>
+        <div class="hero__desc">Привет, на связи W-Wawe! Раньше мы были
+          <a href="#" class="hero__desc-link">изданием,</a>
+          а теперь пробуем себя в разоворном жанре. Говорим о музыке, политике, истории, науке и культуре. Здесь, помимо прямого эфира — архив передач и многое другое :)</div>
+        <button class="btn-reset hero__button" data-graph-path="">Слушать эфир</button>
+      </div>
     </div>
   </div>
 </section>
