--- a/src/partials/podcasts.html
+++ b/src/partials/podcasts.html
@@ -2,203 +2,203 @@
   <div class="container">
     <h2 class="section-title podcasts__title">Подкасты</h2>
     <ul class="list-reset podcasts__list">
-      <li class="podcasts__item">
-        <figure class="podcasts__img">
+      <li class="podcasts__item p-item">
+        <figure class="p-item__img">
           <img src="./img/podcasts/1.png" srcset="./img/podcasts/1@2x.png 2x" loading="lazy" alt="Европа. XIX век">
-          <figcaption class="podcasts__created">14 июня</figcaption>
+          <figcaption class="p-item__created">14 июня</figcaption>
         </figure>
-        <div class="podcasts__info">
-          <div class="podcasts__desc">
-            <div class="podcasts__text">
-              <span class="podcasts__time">15:43</span>
-              <h3 class="podcasts__name">Европа. XIX век</h3>
-              <span class="podcasts__author">Дмитрий Гутенберг</span>
+        <div class="p-item__info">
+          <div class="p-item__desc">
+            <div class="p-item__text">
+              <span class="p-item__time">15:43</span>
+              <h3 class="p-item__name">Европа. XIX век</h3>
+              <span class="p-item__author">Дмитрий Гутенберг</span>
             </div>
-            <button class="btn-reset podcasts__button" data-graph-path="" aria-label="Играть Европа. XIX век">
-              <svg class="podcasts__button-img" aria-hidden="true">
+            <button class="btn-reset p-item__button" data-graph-path="" aria-label="Играть Европа. XIX век">
+              <svg class="p-item__button-img" aria-hidden="true">
                 <use xlink:href="./img/images.svg#playButton" />
               </svg>
             </button>
           </div>
-          <ul class="list-reset podcasts__stats">
-            <li class="podcasts__stats_style podcasts__stats_play">258</li>
-            <li class="podcasts__stats_style podcasts__stats_like">104</li>
-            <li class="podcasts__stats_style podcasts__stats_share">68</li>
+          <ul class="list-reset p-item__stats">
+            <li class="p-item__stats-style p-item__stats-play">258</li>
+            <li class="p-item__stats-style p-item__stats-like">104</li>
+            <li class="p-item__stats-style p-item__stats-share">68</li>
           </ul>
         </div>
       </li>
-      <li class="podcasts__item">
-        <figure class="podcasts__img">
+      <li class="podcasts__item p-item">
+        <figure class="p-item__img">
           <img src="./img/podcasts/2.png" srcset="./img/podcasts/2@2x.png 2x" loading="lazy" alt="О музыке">
-          <figcaption class="podcasts__created">11 июня</figcaption>
+          <figcaption class="p-item__created">11 июня</figcaption>
         </figure>
-        <div class="podcasts__info">
-          <div class="podcasts__desc">
-            <div class="podcasts__text">
-              <span class="podcasts__time">5:32</span>
-              <h3 class="podcasts__name">О музыке</h3>
-              <span class="podcasts__author">Дмитрий Гутенберг</span>
+        <div class="p-item__info">
+          <div class="p-item__desc">
+            <div class="p-item__text">
+              <span class="p-item__time">5:32</span>
+              <h3 class="p-item__name">О музыке</h3>
+              <span class="p-item__author">Дмитрий Гутенберг</span>
             </div>
-            <button class="btn-reset podcasts__button" data-graph-path="" aria-label="Играть О музыке">
-              <svg class="podcasts__button-img" aria-hidden="true">
+            <button class="btn-reset p-item__button" data-graph-path="" aria-label="Играть О музыке">
+              <svg class="p-item__button-img" aria-hidden="true">
                 <use xlink:href="./img/images.svg#playButton" />
               </svg>
             </button>
           </div>
-          <ul class="list-reset podcasts__stats">
-            <li class="podcasts__stats_style podcasts__stats_play">207</li>
-            <li class="podcasts__stats_style podcasts__stats_like">34</li>
-            <li class="podcasts__stats_style podcasts__stats_share">18</li>
+          <ul class="list-reset p-item__stats">
+            <li class="p-item__stats-style p-item__stats-play">207</li>
+            <li class="p-item__stats-style p-item__stats-like">34</li>
+            <li class="p-item__stats-style p-item__stats-share">18</li>
           </ul>
         </div>
       </li>
-      <li class="podcasts__item">
-        <figure class="podcasts__img">
+      <li class="podcasts__item p-item">
+        <figure class="p-item__img">
           <img src="./img/podcasts/3.png" srcset="./img/podcasts/3@2x.png 2x" loading="lazy" alt="Люди сегодня">
-          <figcaption class="podcasts__created">8 июня</figcaption>
+          <figcaption class="p-item__created">8 июня</figcaption>
         </figure>
-        <div class="podcasts__info">
-          <div class="podcasts__desc">
-            <div class="podcasts__text">
-              <span class="podcasts__time">8:54</span>
-              <h3 class="podcasts__name">Люди сегодня</h3>
-              <span class="podcasts__author">Анна Васильева</span>
+        <div class="p-item__info">
+          <div class="p-item__desc">
+            <div class="p-item__text">
+              <span class="p-item__time">8:54</span>
+              <h3 class="p-item__name">Люди сегодня</h3>
+              <span class="p-item__author">Анна Васильева</span>
             </div>
-            <button class="btn-reset podcasts__button" data-graph-path="" aria-label="Играть Люди сегодня">
-              <svg class="podcasts__button-img" aria-hidden="true">
+            <button class="btn-reset p-item__button" data-graph-path="" aria-label="Играть Люди сегодня">
+              <svg class="p-item__button-img" aria-hidden="true">
                 <use xlink:href="./img/images.svg#playButton" />
               </svg>
             </button>
           </div>
-          <ul class="list-reset podcasts__stats">
-            <li class="podcasts__stats_style podcasts__stats_play">104</li>
-            <li class="podcasts__stats_style podcasts__stats_like">54</li>
-            <li class="podcasts__stats_style podcasts__stats_share">42</li>
+          <ul class="list-reset p-item__stats">
+            <li class="p-item__stats-style p-item__stats-play">104</li>
+            <li class="p-item__stats-style p-item__stats-like">54</li>
+            <li class="p-item__stats-style p-item__stats-share">42</li>
           </ul>
         </div>
       </li>
-      <li class="podcasts__item">
-        <figure class="podcasts__img">
+      <li class="podcasts__item p-item">
+        <figure class="p-item__img">
           <img src="./img/podcasts/4.png" srcset="./img/podcasts/4@2x.png 2x" loading="lazy" alt="Хэллоу, Африка!">
-          <figcaption class="podcasts__created">5 июня</figcaption>
+          <figcaption class="p-item__created">5 июня</figcaption>
         </figure>
-        <div class="podcasts__info">
-          <div class="podcasts__desc">
-            <div class="podcasts__text">
-              <span class="podcasts__time">9:04</span>
-              <h3 class="podcasts__name">Хэллоу, Африка!</h3>
-              <span class="podcasts__author">Пётр Дмитриевский</span>
+        <div class="p-item__info">
+          <div class="p-item__desc">
+            <div class="p-item__text">
+              <span class="p-item__time">9:04</span>
+              <h3 class="p-item__name">Хэллоу, Африка!</h3>
+              <span class="p-item__author">Пётр Дмитриевский</span>
             </div>
-            <button class="btn-reset podcasts__button" data-graph-path="" aria-label="Играть Хэллоу, Африка!">
-              <svg class="podcasts__button-img" aria-hidden="true">
+            <button class="btn-reset p-item__button" data-graph-path="" aria-label="Играть Хэллоу, Африка!">
+              <svg class="p-item__button-img" aria-hidden="true">
                 <use xlink:href="./img/images.svg#playButton" />
               </svg>
             </button>
           </div>
-          <ul class="list-reset podcasts__stats">
-            <li class="podcasts__stats_style podcasts__stats_play">87</li>
-            <li class="podcasts__stats_style podcasts__stats_like">44</li>
-            <li class="podcasts__stats_style podcasts__stats_share">5</li>
+          <ul class="list-reset p-item__stats">
+            <li class="p-item__stats-style p-item__stats-play">87</li>
+            <li class="p-item__stats-style p-item__stats-like">44</li>
+            <li class="p-item__stats-style p-item__stats-share">5</li>
           </ul>
         </div>
       </li>
-      <li class="podcasts__item">
-        <figure class="podcasts__img">
+      <li class="podcasts__item p-item">
+        <figure class="p-item__img">
           <img src="./img/podcasts/5.png" srcset="./img/podcasts/5@2x.png 2x" loading="lazy" alt="Обо всём">
-          <figcaption class="podcasts__created">2 июня</figcaption>
+          <figcaption class="p-item__created">2 июня</figcaption>
         </figure>
-        <div class="podcasts__info">
-          <div class="podcasts__desc">
-            <div class="podcasts__text">
-              <span class="podcasts__time">7:03</span>
-              <h3 class="podcasts__name">Обо всём</h3>
-              <span class="podcasts__author">Пётр Дмитриевский</span>
+        <div class="p-item__info">
+          <div class="p-item__desc">
+            <div class="p-item__text">
+              <span class="p-item__time">7:03</span>
+              <h3 class="p-item__name">Обо всём</h3>
+              <span class="p-item__author">Пётр Дмитриевский</span>
             </div>
-            <button class="btn-reset podcasts__button" data-graph-path="" aria-label="Играть Обо всём">
-              <svg class="podcasts__button-img" aria-hidden="true">
+            <button class="btn-reset p-item__button" data-graph-path="" aria-label="Играть Обо всём">
+              <svg class="p-item__button-img" aria-hidden="true">
                 <use xlink:href="./img/images.svg#playButton" />
               </svg>
             </button>
           </div>
-          <ul class="list-reset podcasts__stats">
-            <li class="podcasts__stats_style podcasts__stats_play">64</li>
-            <li class="podcasts__stats_style podcasts__stats_like">30</li>
-            <li class="podcasts__stats_style podcasts__stats_share">8</li>
+          <ul class="list-reset p-item__stats">
+            <li class="p-item__stats-style p-item__stats-play">64</li>
+            <li class="p-item__stats-style p-item__stats-like">30</li>
+            <li class="p-item__stats-style p-item__stats-share">8</li>
           </ul>
         </div>
       </li>
-      <li class="podcasts__item">
-        <figure class="podcasts__img">
+      <li class="podcasts__item p-item">
+        <figure class="p-item__img">
           <img src="./img/podcasts/6.png" srcset="./img/podcasts/6@2x.png 2x" loading="lazy" alt="Физика цвета">
-          <figcaption class="podcasts__created">28 мая</figcaption>
+          <figcaption class="p-item__created">28 мая</figcaption>
         </figure>
-        <div class="podcasts__info">
-          <div class="podcasts__desc">
-            <div class="podcasts__text">
-              <span class="podcasts__time">9:15</span>
-              <h3 class="podcasts__name">Физика цвета</h3>
-              <span class="podcasts__author">Татьяна Флеганова</span>
+        <div class="p-item__info">
+          <div class="p-item__desc">
+            <div class="p-item__text">
+              <span class="p-item__time">9:15</span>
+              <h3 class="p-item__name">Физика цвета</h3>
+              <span class="p-item__author">Татьяна Флеганова</span>
             </div>
-            <button class="btn-reset podcasts__button" data-graph-path="" aria-label="Играть Физика цвета">
-              <svg class="podcasts__button-img" aria-hidden="true">
+            <button class="btn-reset p-item__button" data-graph-path="" aria-label="Играть Физика цвета">
+              <svg class="p-item__button-img" aria-hidden="true">
                 <use xlink:href="./img/images.svg#playButton" />
               </svg>
             </button>
           </div>
-          <ul class="list-reset podcasts__stats">
-            <li class="podcasts__stats_style podcasts__stats_play">58</li>
-            <li class="podcasts__stats_style podcasts__stats_like">29</li>
-            <li class="podcasts__stats_style podcasts__stats_share">14</li>
+          <ul class="list-reset p-item__stats">
+            <li class="p-item__stats-style p-item__stats-play">58</li>
+            <li class="p-item__stats-style p-item__stats-like">29</li>
+            <li class="p-item__stats-style p-item__stats-share">14</li>
           </ul>
         </div>
       </li>
-      <li class="podcasts__item">
-        <figure class="podcasts__img">
+      <li class="podcasts__item p-item">
+        <figure class="p-item__img">
           <img src="./img/podcasts/7.png" srcset="./img/podcasts/7@2x.png 2x" loading="lazy" alt="Источник звука">
-          <figcaption class="podcasts__created">22 мая</figcaption>
+          <figcaption class="p-item__created">22 мая</figcaption>
         </figure>
-        <div class="podcasts__info">
-          <div class="podcasts__desc">
-            <div class="podcasts__text">
-              <span class="podcasts__time">16:04</span>
-              <h3 class="podcasts__name">Источник звука</h3>
-              <span class="podcasts__author">Пётр Дмитриевский</span>
+        <div class="p-item__info">
+          <div class="p-item__desc">
+            <div class="p-item__text">
+              <span class="p-item__time">16:04</span>
+              <h3 class="p-item__name">Источник звука</h3>
+              <span class="p-item__author">Пётр Дмитриевский</span>
             </div>
-            <button class="btn-reset podcasts__button" data-graph-path="" aria-label="Играть Источник звука">
-              <svg class="podcasts__button-img" aria-hidden="true">
+            <button class="btn-reset p-item__button" data-graph-path="" aria-label="Играть Источник звука">
+              <svg class="p-item__button-img" aria-hidden="true">
                 <use xlink:href="./img/images.svg#playButton" />
               </svg>
             </button>
           </div>
-          <ul class="list-reset podcasts__stats">
-            <li class="podcasts__stats_style podcasts__stats_play">55</li>
-            <li class="podcasts__stats_style podcasts__stats_like">20</li>
-            <li class="podcasts__stats_style podcasts__stats_share">12</li>
+          <ul class="list-reset p-item__stats">
+            <li class="p-item__stats-style p-item__stats-play">55</li>
+            <li class="p-item__stats-style p-item__stats-like">20</li>
+            <li class="p-item__stats-style p-item__stats-share">12</li>
           </ul>
         </div>
       </li>
-      <li class="podcasts__item">
-        <figure class="podcasts__img">
+      <li class="podcasts__item p-item">
+        <figure class="p-item__img">
           <img src="./img/podcasts/8.png" srcset="./img/podcasts/8@2x.png 2x" loading="lazy" alt="Правила этикета">
-          <figcaption class="podcasts__created">18 мая</figcaption>
+          <figcaption class="p-item__created">18 мая</figcaption>
         </figure>
-        <div class="podcasts__info">
-          <div class="podcasts__desc">
-            <div class="podcasts__text">
-              <span class="podcasts__time">6:55</span>
-              <h3 class="podcasts__name">Правила этикета</h3>
-              <span class="podcasts__author">Татьяна Флеганова</span>
+        <div class="p-item__info">
+          <div class="p-item__desc">
+            <div class="p-item__text">
+              <span class="p-item__time">6:55</span>
+              <h3 class="p-item__name">Правила этикета</h3>
+              <span class="p-item__author">Татьяна Флеганова</span>
             </div>
-            <button class="btn-reset podcasts__button" data-graph-path="" aria-label="Играть Правила этикета">
-              <svg class="podcasts__button-img" aria-hidden="true">
+            <button class="btn-reset p-item__button" data-graph-path="" aria-label="Играть Правила этикета">
+              <svg class="p-item__button-img" aria-hidden="true">
                 <use xlink:href="./img/images.svg#playButton" />
               </svg>
             </button>
           </div>
-          <ul class="list-reset podcasts__stats">
-            <li class="podcasts__stats_style podcasts__stats_play">24</li>
-            <li class="podcasts__stats_style podcasts__stats_like">54</li>
-            <li class="podcasts__stats_style podcasts__stats_share">42</li>
+          <ul class="list-reset p-item__stats">
+            <li class="p-item__stats-style p-item__stats-play">24</li>
+            <li class="p-item__stats-style p-item__stats-like">54</li>
+            <li class="p-item__stats-style p-item__stats-share">42</li>
           </ul>
         </div>
       </li>
