--- a/src/scss/components/_broadcasts.scss
+++ b/src/scss/components/_broadcasts.scss
@@ -56,7 +56,7 @@
   // }
 }
 
-.ba {
+.b-arc {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -93,7 +93,7 @@
   }
 }
 
-.bi {
+.b-item {
   &__img {
     display: block;
     max-width: 255px;
