--- a/src/partials/broadcasts.html
+++ b/src/partials/broadcasts.html
@@ -11,85 +11,85 @@
           <option value="4">Татьяна Флеганова</option>
         </select>
       </li>
-      <li class="broadcasts__item ba">
+      <li class="broadcasts__item b-arc">
         <picture aria-hidden="true">
           <source srcset="./img/mic@2x.png 2x, ./img/mic.png 1x" />
-          <img class="ba__mic" src="./img/mic.png" alt="Микрофон" />
+          <img class="b-arc__mic" src="./img/mic.png" alt="Микрофон" />
         </picture>
-        <button class="btn-reset ba__btn" data-graph-path="">
-          <svg class="ba__btn-icon">
-            <use xlink:href="./img/images.svg#archiveButton"></use>
+        <button class="btn-reset b-arc__btn" data-graph-path="">
+          <svg class="b-arc__btn-icon">
+            <use xlink:href="./img/images.svg#imageButton"></use>
           </svg>
           Архив
         </button>
-        <span class="ba__info">В архив попадают все передачи, которые вы пропустили!
-          <span class="ba__info-accent">Enjoy :)</span>
+        <span class="b-arc__info">В архив попадают все передачи, которые вы пропустили!
+          <span class="b-arc__info-accent">Enjoy :)</span>
         </span>
       </li>
-      <li class="broadcasts__item bi">
+      <li class="broadcasts__item b-item">
         <picture>
           <source srcset="./img/broadcasts/1@2x.png 2x, ./img/broadcasts/1.png 1x" />
-          <img class="bi__img" src="./img/broadcasts/1.png" alt="О людях и книгах" />
+          <img class="b-item__img" src="./img/broadcasts/1.png" alt="О людях и книгах" />
         </picture>
-        <div class="bi__info">
-          <h3 class="bi__title">О людях и книгах</h3>
-          <span class="bi__announcement">Анонсируется отдельно</span>
-          <button class="btn-reset bi__more" data-graph-path="">Подробнее</button>
+        <div class="b-item__info">
+          <h3 class="b-item__title">О людях и книгах</h3>
+          <span class="b-item__announcement">Анонсируется отдельно</span>
+          <button class="btn-reset b-item__more" data-graph-path="">Подробнее</button>
         </div>
       </li>
       <li class="broadcasts__item bi">
         <picture>
           <source srcset="./img/broadcasts/2@2x.png 2x, ./img/broadcasts/2.png 1x" />
-          <img class="bi__img" src="./img/broadcasts/2.png" alt="Графомания td." />
+          <img class="b-item__img" src="./img/broadcasts/2.png" alt="Графомания td." />
         </picture>
-        <div class="bi__info">
-          <h3 class="bi__title">Графомания td.</h3>
-          <span class="bi__announcement">По понедельникам в 10:00 </span>
-          <button class="btn-reset bi__more" data-graph-path="">Подробнее</button>
+        <div class="b-item__info">
+          <h3 class="b-item__title">Графомания td.</h3>
+          <span class="b-item__announcement">По понедельникам в 10:00 </span>
+          <button class="btn-reset b-item__more" data-graph-path="">Подробнее</button>
         </div>
       </li>
       <li class="broadcasts__item bi">
         <picture>
           <source srcset="./img/broadcasts/3@2x.png 2x, ./img/broadcasts/3.png 1x" />
-          <img class="bi__img" src="./img/broadcasts/3.png" alt="Не Рим, не Троя" />
+          <img class="b-item__img" src="./img/broadcasts/3.png" alt="Не Рим, не Троя" />
         </picture>
-        <div class="bi__info">
-          <h3 class="bi__title">Не Рим, не Троя</h3>
-          <span class="bi__announcement">По вторникам в 12:00</span>
-          <button class="btn-reset bi__more" data-graph-path="">Подробнее</button>
+        <div class="b-item__info">
+          <h3 class="b-item__title">Не Рим, не Троя</h3>
+          <span class="b-item__announcement">По вторникам в 12:00</span>
+          <button class="btn-reset b-item__more" data-graph-path="">Подробнее</button>
         </div>
       </li>
       <li class="broadcasts__item bi">
         <picture>
           <source srcset="./img/broadcasts/4@2x.png 2x, ./img/broadcasts/4.png 1x" />
-          <img class="bi__img" src="./img/broadcasts/4.png" alt="Эрудит" />
+          <img class="b-item__img" src="./img/broadcasts/4.png" alt="Эрудит" />
         </picture>
-        <div class="bi__info">
-          <h3 class="bi__title">Эрудит</h3>
-          <span class="bi__announcement">По пятницам в 17:00</span>
-          <button class="btn-reset bi__more" data-graph-path="">Подробнее</button>
+        <div class="b-item__info">
+          <h3 class="b-item__title">Эрудит</h3>
+          <span class="b-item__announcement">По пятницам в 17:00</span>
+          <button class="btn-reset b-item__more" data-graph-path="">Подробнее</button>
         </div>
       </li>
       <li class="broadcasts__item bi">
         <picture>
           <source srcset="./img/broadcasts/5@2x.png 2x, ./img/broadcasts/5.png 1x" />
-          <img class="bi__img" src="./img/broadcasts/5.png" alt="Тонкости эпох" />
+          <img class="b-item__img" src="./img/broadcasts/5.png" alt="Тонкости эпох" />
         </picture>
-        <div class="bi__info">
-          <h3 class="bi__title">Тонкости эпох</h3>
-          <span class="bi__announcement">По субботам в 10:00</span>
-          <button class="btn-reset bi__more" data-graph-path="">Подробнее</button>
+        <div class="b-item__info">
+          <h3 class="b-item__title">Тонкости эпох</h3>
+          <span class="b-item__announcement">По субботам в 10:00</span>
+          <button class="btn-reset b-item__more" data-graph-path="">Подробнее</button>
         </div>
       </li>
       <li class="broadcasts__item bi">
         <picture>
           <source srcset="./img/broadcasts/6@2x.png 2x, ./img/broadcasts/6.png 1x" />
-          <img class="bi__img" src="./img/broadcasts/6.png" alt="Живые мысли" />
+          <img class="b-item__img" src="./img/broadcasts/6.png" alt="Живые мысли" />
         </picture>
-        <div class="bi__info">
-          <h3 class="bi__title">Живые мысли</h3>
-          <span class="bi__announcement">По воскресеньям в 15:30</span>
-          <button class="btn-reset bi__more" data-graph-path="">Подробнее</button>
+        <div class="b-item__info">
+          <h3 class="b-item__title">Живые мысли</h3>
+          <span class="b-item__announcement">По воскресеньям в 15:30</span>
+          <button class="btn-reset b-item__more" data-graph-path="">Подробнее</button>
         </div>
       </li>
     </ul>
