--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,10 @@
 <header class="header">
-    <div class="header__top">
-      <div class="container">
+  <div class="header__top">
+
+  </div>
+  <div class="header__middle">
+    <div class="container">
+      <div class="header__middle-container">
         <svg class="logo" aria-label="Логотип">
           <use xlink:href="./img/images.svg#logo" />
         </svg>
@@ -19,50 +23,55 @@
               <use xlink:href="./img/sprite.svg#search" />
             </svg>
           </button>
-          <button class="btn-reset login" data-graph-path="">Вход</button>
+          <button class="btn-reset login" data-graph-path="">
+            <svg class="login__icon">
+              <use xlink:href="./img/images.svg#imageButton"></use>
+            </svg>
+            Вход
+          </button>
         </div>
       </div>
     </div>
-    <div class="header__bottom">
-      <div class="container">
-        <nav class="nav-bottom" title="">
-          <ul class="list-reset nav-bottom__list">
-            <li class="nav-bottom__item"><a href="#" class="nav-bottom__link">Новости</a></li>
-            <li class="nav-bottom__item"><a href="#" class="nav-bottom__link">Блоги</a></li>
-            <li class="nav-bottom__item"><a href="#" class="nav-bottom__link">Топы</a></li>
-            <li class="nav-bottom__item"><a href="#" class="nav-bottom__link">Опросы</a></li>
-            <li class="nav-bottom__item"><a href="#" class="nav-bottom__link">Рейтинги</a></li>
-            <li class="nav-bottom__item"><a href="#" class="nav-bottom__link">Реклама</a></li>
-            <li class="nav-bottom__item on-air-group">
-              <div class="on-air">
-                <button class="btn-reset on-air__button" data-graph-path="">
-                  <svg class="on-air__play" aria-label="Играть ранее в эфире">
-                    <use xlink:href="./img/sprite.svg#play_header_btn" />
-                  </svg>
-                </button>
-                <div class="on-air__info">
-                  <span class="on-air__desc">Ранее в эфире</span>
-                  <span class="on-air__name">«Музыка»</span>
-                </div>
-              </div>
-              <div class="on-air">
-                <button class="btn-reset on-air__button" data-graph-path="">
-                  <svg class="on-air__play" aria-label="Играть сейчас в эфире">
-                    <use xlink:href="./img/sprite.svg#play_header_btn" />
-                  </svg>
-                </button>
-                <div class="on-air__info">
-                  <span class="on-air__desc">Сейчас в эфире</span>
-                  <span class="on-air__name">«Как так?»</span>
-                </div>
-              </div>
-            </li>
-            <li class="nav-bottom__item">
-              <div class="age-limit">12+</div>
-            </li>
-          </ul>
-        </nav>
-      </div>
+  </div>
+  <div class="header__bottom">
+    <div class="container">
+      <nav class="nav-bottom" title="">
+        <ul class="list-reset nav-bottom__list">
+          <li class="nav-bottom__item"><a href="#" class="nav-bottom__link">Новости</a></li>
+          <li class="nav-bottom__item"><a href="#" class="nav-bottom__link">Блоги</a></li>
+          <li class="nav-bottom__item"><a href="#" class="nav-bottom__link">Топы</a></li>
+          <li class="nav-bottom__item"><a href="#" class="nav-bottom__link">Опросы</a></li>
+          <li class="nav-bottom__item"><a href="#" class="nav-bottom__link">Рейтинги</a></li>
+          <li class="nav-bottom__item"><a href="#" class="nav-bottom__link">Реклама</a></li>
+        </ul>
+        <div class="on-air-group">
+          <div class="on-air">
+            <button class="btn-reset on-air__button" data-graph-path="">
+              <svg class="on-air__play" aria-label="Играть ранее в эфире">
+                <use xlink:href="./img/sprite.svg#play_header_btn" />
+              </svg>
+            </button>
+            <div class="on-air__info">
+              <span class="on-air__desc">Ранее в эфире</span>
+              <span class="on-air__name">«Музыка»</span>
+            </div>
+          </div>
+          <div class="on-air">
+            <button class="btn-reset on-air__button" data-graph-path="">
+              <svg class="on-air__play" aria-label="Играть сейчас в эфире">
+                <use xlink:href="./img/sprite.svg#play_header_btn" />
+              </svg>
+            </button>
+            <div class="on-air__info">
+              <span class="on-air__desc">Сейчас в эфире</span>
+              <span class="on-air__name">«Как так?»</span>
+            </div>
+          </div>
+        </div>
+        <div class="age-limit">
+          <span class="age-limit__age">12+</span>
+        </div>
+      </nav>
     </div>
-  <!-- <div class="container"></div> -->
+  </div>
 </header>
