--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,7 @@
 @import "vars";
 @import "mixins";
 @import "fonts";
+@import "functions";
 @import "settings";
 
 // подключения компонентов страницы
