--- a/src/scss/mixins/_burger.scss
+++ b/src/scss/mixins/_burger.scss
@@ -1,16 +1,16 @@
 /* stylelint-disable */
 
 @mixin burger {
-  --burger-width: 30px;
-  --burger-height: 30px;
-  --burger-line-height: 2px;
+  --burger-width: 24px;
+  --burger-height: 24px;
+  --burger-line-height: 3px;
 
   position: relative;
   border: none;
   padding: 0;
   width: var(--burger-width);
   height: var(--burger-height);
-  color: #000;
+  color: $color-primary;
   background-color: transparent;
   cursor: pointer;
 
@@ -22,6 +22,7 @@
     width: 100%;
     height: var(--burger-line-height);
     background-color: currentColor;
+    border-radius: 4px;
     transition: transform 0.3s ease-in-out, top 0.3s ease-in-out;
   }
 
@@ -40,6 +41,7 @@
     width: 100%;
     height: var(--burger-line-height);
     background-color: currentColor;
+    border-radius: 4px;
     transform: translateY(-50%);
     transition: transform 0.3s ease-in-out;
   }
