--- a/src/scss/components/_broadcasts.scss
+++ b/src/scss/components/_broadcasts.scss
@@ -2,11 +2,39 @@
   padding-top: 108px;
   padding-bottom: 94px;
 
-  &__list {
+  &__container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, minmax(260px, auto));
+    grid-auto-flow: column;
+    grid-template-columns: 255px 1fr;
+    grid-template-rows: repeat(auto-fit, minmax(260px, auto));
     gap: 30px;
+
+    @include tablet-950 {
+      display: block;
+    }
+  }
+
+  &__select {
+    width: 100%;
+    margin-bottom: 47px;
+
+    @include tablet-950 {
+      max-width: 255px;
+    }
+  }
+
+  &__list {
+    order: 2;
+    grid-row: span 2;
+    display: grid;
+    // grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(260px, max-content);
+    gap: 30px;
+
+    @include tablet {
+      grid-template-columns: repeat(2, 1fr);
+    }
   }
 
 
@@ -15,27 +43,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    order: 3;
     border: 1px solid $color-light_color;
     box-sizing: border-box;
-
-    &:first-child {
-      margin-top: -13px;
-      border: none;
-      justify-content: flex-start;
-      order: 0;
-    }
-
-    &:nth-child(2) {
-      border: none;
-      order: 2;
-    }
-
-    &:nth-child(3),
-    &:nth-child(4),
-    &:nth-child(5) {
-      order: 1;
-    }
   }
 
   &__title {
@@ -46,17 +55,11 @@
     margin-bottom: 8px;
     color: $color-text_gray;
   }
-
-  // &__select {
-  //   width: 100%;
-  //   height: min-content;
-  //   margin-right: 58px;
-  //   padding: 0;
-  //   /* background-color: white; */
-  // }
 }
 
 .b-arc {
+  max-height: 260px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -96,7 +99,6 @@
 .b-item {
   &__img {
     display: block;
-    max-width: 255px;
     width: 100%;
     max-height: 148px;
     object-fit: cover;
@@ -126,6 +128,7 @@
   }
 
   &__more {
+    padding-top: 20px;
     display: block;
     width: fit-content;
     font-style: italic;
@@ -133,7 +136,7 @@
     padding-right: 28px + 0px;
     background-image: url('../img/sprite.svg#arrow_2right');
     background-repeat: no-repeat;
-    background-position: right;
+    background-position: right bottom;
     background-size: 28px 26px;
   }
 }
