--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -13,10 +13,10 @@
   &__middle {
     padding-top: 20px;
     padding-bottom: 20px;
+    position: relative;
     border-bottom: 1px solid $color-light_color;
 
     &-container {
-      position: relative;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -30,8 +30,10 @@
 }
 
 .logo {
-  width: 160px;
+  max-width: 160px;
+  width: 100%;
   height: 20px;
+  margin-right: 24px;
   color: $color-primary;
   fill: $color-light_black;
 
@@ -39,14 +41,24 @@
     width: 112px;
     height: 14px;
     position: absolute;
-    top: 0;
-    transform: translateY(-38px);
+    top: -45%;
   }
 }
+
+.burger {
+  @include burger;
+  display: none;
+
+  @include small-tablet {
+    display: block;
+  }
+}
+// menu--active
 
 .nav-main {
   max-width: 638px;
   width: 100%;
+  margin-right: 24px;
   transform: translateY(1px);
 
   &__list {
@@ -65,6 +77,14 @@
     line-height: 1;
 
     @include nav_hover-focus-active;
+  }
+
+  @include small-tablet {
+    display: none;
+
+    &.menu--active {
+      display: block;
+    }
   }
 }
 
@@ -158,6 +178,10 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+
+    @include small-tablet {
+      margin-right: 21px;
+    }
   }
 
   &__item:not(:last-child) {
@@ -176,6 +200,15 @@
   flex: 0 0 350px;
   display: flex;
   align-items: center;
+
+  @include tablet {
+    margin-right: 0;
+    flex: 0 0 301px;
+  }
+
+  @include small-tablet {
+    flex: 0 0 24px;
+  }
 }
 
 .on-air {
@@ -208,6 +241,10 @@
     max-width: 149px;
   }
 
+  @include small-tablet {
+    display: none;
+  }
+
   &__button {
     flex: 0 0 26px;
     width: 100%;
@@ -223,6 +260,14 @@
 
     &:active .on-air__play {
       fill: $color-primary_shade;
+    }
+
+    &-small-tablet {
+      display: none;
+
+      @include small-tablet {
+        display: block;
+      }
     }
   }
 
@@ -275,4 +320,9 @@
     font-size: 12px;
     color: $color-text_gray;
   }
+
+  @include tablet {
+    display: none;
+  }
+
 }
