--- a/src/scss/components/_podcasts.scss
+++ b/src/scss/components/_podcasts.scss
@@ -8,7 +8,7 @@
 
   &__list {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
     grid-auto-rows: 140px;
     gap: 30px;
     margin-bottom: 60px;
